--- a/style.css
+++ b/style.css
@@ -11,17 +11,17 @@ a {
 p {
 	font-family: 'Museo Sans Cyrl';
 }
-@media only screen and (min-width: 1080px) and (max-width: 1920px) {
+@media only screen and (min-width: 1366px) {
 	
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1366px) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) {
 
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 
 }
-@media only screen and (min-width: 375px) and (max-width: 667px) {
+@media only screen and (min-width: 375px) and (max-width: 768px) {
 
 }
