изменила все в index.html и style.css

--- a/style.css
+++ b/style.css
@@ -39,27 +39,24 @@ p {
 }
 
 .heading {
-	width: 100%;
 	position: fixed;
+	width: 100%;
+	display: flex;
 	top: 0;
 	left: 0;
 	height: 150px;
+	align-items: center;
+	justify-content: space-between;
+	padding-right: 59px;
 }
 
 .heading__logo {
-	position: absolute;
-	align-items: center;
 	padding-top: 5px;
 }
 /* тут я не знаю где брать картинку 
 .heading__burger {
 
 } */
-.heading__nav {
-	float: right;
-	margin-right: 59px;
-	align-items: center;
-}
 
 .heading__nav li {
 	display: inline;
@@ -70,23 +67,25 @@ p {
 	padding-right: 5px;
 }
 .content {
-	position: relative;
 	flex-direction: column;
 	min-height: 100vh;
 	padding-left: 143px;
+	padding-top: 160px;
 }
 .content__img_1 {
-		width: 225px;
-		height: 300px;
-	}
-	.content__img_2 {
-		width: 202px;
-		height: 270px;
-	}
-	.content__img_3 {
-		width: 202px;
-		height: 270px;
-	}
+	margin-right: 24px;
+	width: 225px;
+	height: 300px;
+}
+.content__img_2 {
+	margin-right: 24px;
+	width: 202px;
+	height: 270px;
+}
+.content__img_3 {
+	width: 202px;
+	height: 270px;
+}
 
 
 
@@ -96,60 +95,83 @@ p {
 		background-size: cover;
 		background-attachment: fixed;
 	}
+	a {
+		font-size: 22px;
+		line-height: 26px;
+	}
 	.heading {
-		padding-left: 143px;
-		padding-top: 56px;
+		padding-left: 202px;
+		padding-top: 87px;
+		padding-right: 87px;
 	}
 	.heading__logo {
-		padding-top: 20px; 
+		padding-top: 9px;
+		width: 142px;
+		height: 75px; 
+	}
+	.heading__nav li {
+		margin-right: 28px;
 	}
 	.heading__burger {
 		display: none;
 	}
-
+	.content {
+    padding-left: 199px;
+    padding-top: 243px;
+	}
+	.content__txt {
+		float: left;
+		width: 37%;
+		padding-top: 37px;
+	}
 	.content__title {
-		position: absolute;
-		padding-top: 194px;
 		font-size: 280px;
 		line-height: 371px;
 
 	}
 	.content__caption {
-		padding-top: 477px;
-		position: absolute;
+		margin-top: -141px;
 		font-size: 98px;
 		line-height: 130px;
 		padding-left: 84px;
+		margin-bottom: 18px;
 	}
 	.content__text {
-		padding-top: 619px;
-		width: 551px;
+		width: 558px;
 		font-size: 22px;
 		line-height: 26px;
-		padding-left: 16px;
-		margin-bottom: 28px;
+		padding-left: 22px;
+		margin-bottom: 56px;
 	}
 	.content__btn {
-		position: absolute;
-		padding: 10px 62px 10px 62px;
+		padding: 20px 90px 20px 90px;
 		background: #D4BEA3;
 		border-radius: 48px;
-		margin-left: 16px; 
+		margin-left: 20px; 
 	}
-	/* не знаю как их прибить к правому краю */
+	
 	.content__img_1 {
 		width: 317px;
 		height: 421px;
+		margin-right: 33px;
 	}
 	.content__img_2 {
 		width: 284px;
 		height: 379px;
+		margin-right: 33px;
 	}
 	.content__img_3 {
 		width: 284px;
 		height: 379px;
 	}
-	
+	.content__img {
+		height: 715px;
+		display: flex;
+		align-items: center;
+  		justify-content: center;
+		float: right;
+		width: 51%;
+	}
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1366px) {
@@ -160,40 +182,48 @@ p {
 	}
 	.heading {
 		padding-left: 143px;
-		padding-top: 56px;
+		padding-top: 18px;
+		padding-right: 110px; 
 	}
 	
 	.heading__burger {
 		display: none;
 	}
-
+	.content__txt {
+		float: left;
+		width: 37%;
+		padding-top: 37px;
+	}
 	.content__title {
-		position: absolute;
-		padding-top: 194px;
 		font-size: 200px;
 		line-height: 265px;
 	}
 	.content__caption {
-		padding-top: 356px;
-		position: absolute;
 		font-size: 70px;
 		line-height: 93px;
 		padding-left: 60px;
+		margin-bottom: 12px;
+		margin-top: -100px;
 	}
 	.content__text {
-		padding-top: 463px;
-		width: 410px;
 		font-size: 16px;
 		line-height: 19px;
 		padding-left: 15px;
-		margin-bottom: 25px;
+		margin-bottom: 35px;
 	}
 	.content__btn {
-		position: absolute;
 		padding: 10px 60px 10px 60px;
 		background: #D4BEA3;
 		border-radius: 48px;
-		margin-left: 16px; 
+		margin-left: 19px; 
+	}
+	.content__img {
+		height: 534px;
+		display: flex;
+		align-items: center;
+  		justify-content: center;
+		float: right;
+		width: 43%;
 	}
 	
 }
@@ -205,47 +235,57 @@ p {
 		background-attachment: fixed;
 	}
 	.heading {
-		padding-left: 44px;
-		padding-top: 66px;
+		padding-left: 40px;
+		padding-top: 15px;
+		padding-right: 177px;
 	}
-	
+	.heading__logo {
+    padding-top: 2px;
+	}
 	.heading__burger {
 		display: none;
 	}
-	.heading__nav {
-		margin-right: 17px;
-	}
 	.content {
-		padding-left: 45px;
+		padding-left: 40px;
+		padding-top: 160px;
 	}
+	.content__txt {
+		float: left;
+		width: 41%;
+		padding-top: 37px;
+	}
+	
 	.content__title {
-		position: absolute;
-		padding-top: 204px;
 		font-size: 200px;
 		line-height: 265px;
 	}
 	.content__caption {
-		position: absolute;
 		padding-left: 60px;
-		padding-top: 368px;
+		margin-top: -102px;
 		font-size: 70px;
 		line-height: 93px;
+		margin-bottom: 12px;
 	}
 	.content__text {
 		padding-left: 14px;
-		padding-top: 475px;
-		width: 403px;
 		font-size: 16px;
 		line-height: 19px;
-		margin-bottom: 27px;
+		margin-bottom: 38px;
 	}
 	
 	.content__btn {
-		margin-left: 18px;
-		position: absolute;
+		margin-left: 19px;
 		padding: 10px 60px 10px 60px;
 		background: #D4BEA3;
 		border-radius: 48px; 
+	}
+	.content__img {
+		height: 534px;
+		display: flex;
+		align-items: center;
+  		justify-content: center;
+		float: right;
+		width: 36%;
 	}
 	
 }
@@ -256,8 +296,10 @@ p {
 		background-attachment: fixed;
 	}
 	.heading {
-		padding-left: 40px;
-		padding-top: 35px;
+		height: 133px;
+		padding-left: 37px;
+		padding-top: 5px;
+		padding-right: 10px;
 	}
 	
 	.heading__nav {
@@ -267,37 +309,30 @@ p {
 		float: right;
 	}
 	.content {
+		padding-top: 135px;
 		padding-left: 10px;
 	}
+	.content__txt {
+		margin-right: 19px;
+	}
 	.content__title {
-		position: absolute;
-		padding-top: 143px;
 		font-size: 170px;
 		line-height: 225px;
 	}
 	.content__caption {
-		position: absolute;
-		padding-left: 58px;
+		margin-top: -76px;
 		font-size: 60px;
 		line-height: 79px;
-		padding-top: 293px;
+		text-align: right;
+		margin-bottom: 42px;
 	}
 	.content__text {
-		margin-left: 23px;
-		padding-top: 423px;
-		width: 292px;
 		font-size: 18px;
 		line-height: 22px;
 		text-align: center;
 		margin-bottom: 40px;
 	}
-	.content__img_1 {
-		display: none;
-	}
-	.content__img_2 {
-		display: none;
-	}
-	.content__img_3 {
+	.content__img {
 		display: none;
 	}
 	.content__btn {
