--- a/style.css
+++ b/style.css
@@ -101,8 +101,8 @@ p {
 	}
 	.heading {
 		padding-left: 202px;
-		padding-top: 87px;
-		padding-right: 87px;
+		padding-top: 84px;
+		padding-right: 84px;
 	}
 	.heading__logo {
 		padding-top: 9px;
@@ -141,7 +141,7 @@ p {
 		font-size: 22px;
 		line-height: 26px;
 		padding-left: 22px;
-		margin-bottom: 56px;
+		margin-bottom: 52px;
 	}
 	.content__btn {
 		padding: 20px 90px 20px 90px;
@@ -169,8 +169,7 @@ p {
 		display: flex;
 		align-items: center;
   		justify-content: center;
-		float: right;
-		width: 51%;
+		width: 63%;
 	}
 }
 
@@ -183,7 +182,7 @@ p {
 	.heading {
 		padding-left: 143px;
 		padding-top: 18px;
-		padding-right: 110px; 
+		padding-right: 60px; 
 	}
 	
 	.heading__burger {
@@ -191,7 +190,7 @@ p {
 	}
 	.content__txt {
 		float: left;
-		width: 37%;
+		width: 34%;
 		padding-top: 37px;
 	}
 	.content__title {
@@ -209,13 +208,17 @@ p {
 		font-size: 16px;
 		line-height: 19px;
 		padding-left: 15px;
-		margin-bottom: 35px;
+		margin-bottom: 27px;
 	}
 	.content__btn {
-		padding: 10px 60px 10px 60px;
+		display: flex;
+		width: 207px;
+		height: 42px;
+		align-items: center;
+  		justify-content: center;
 		background: #D4BEA3;
 		border-radius: 48px;
-		margin-left: 19px; 
+		margin-left: 18px; 
 	}
 	.content__img {
 		height: 534px;
@@ -223,7 +226,7 @@ p {
 		align-items: center;
   		justify-content: center;
 		float: right;
-		width: 43%;
+		width: 56%;
 	}
 	
 }
@@ -237,7 +240,7 @@ p {
 	.heading {
 		padding-left: 40px;
 		padding-top: 15px;
-		padding-right: 177px;
+		padding-right: 126px;
 	}
 	.heading__logo {
     padding-top: 2px;
@@ -264,28 +267,32 @@ p {
 		margin-top: -102px;
 		font-size: 70px;
 		line-height: 93px;
-		margin-bottom: 12px;
+		margin-bottom: 14px;
 	}
 	.content__text {
 		padding-left: 14px;
 		font-size: 16px;
 		line-height: 19px;
-		margin-bottom: 38px;
+		margin-bottom: 26px;
 	}
 	
 	.content__btn {
 		margin-left: 19px;
-		padding: 10px 60px 10px 60px;
+		display: flex;
+		width: 207px;
+		height: 42px;
+		align-items: center;
+  		justify-content: center;
 		background: #D4BEA3;
 		border-radius: 48px; 
 	}
 	.content__img {
+		padding-left: 123px;
 		height: 534px;
 		display: flex;
 		align-items: center;
   		justify-content: center;
-		float: right;
-		width: 36%;
+		width: 59%;
 	}
 	
 }
@@ -337,7 +344,11 @@ p {
 	}
 	.content__btn {
 		margin-left: 68px;
-		padding: 10px 60px 10px 60px;
+		display: flex;
+		width: 207px;
+		height: 42px;
+		align-items: center;
+  		justify-content: center;
 		background: #D4BEA3;
 		border-radius: 48px; 
 	}
